<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensors</name>
  <version>0.0.0</version>
  <description>Sensor suite for the Autonomous Mobile Robot, including IMU, Load Cell, and Battery monitoring.</description>
  <maintainer email="omar.ahmed0122966@gmail.com">omar</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <depend>gpiozero</depend>
  <depend>python3-smbus</depend> <depend>hx711_multi</depend>   <depend>python3-serial</depend> <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>